Clarified column name.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<th>Current Version</th>
 								<th>Links</th>
 								<th>Build Status</th>
-								<th>Coverage</th>
+								<th>Test Coverage</th>
 							</thead>
 							<tbody>
 								<tr style="display: none;" id="template_row">
