Updated to use the "CPAN Distributions List" JQuery plugin.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="/css/pygment_trac.css"/>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="/js/script.js"></script>
-		<script type="text/javascript" src="/js/cpan.js"></script>
+		<script type="text/javascript" src="/js/cpan-distributions-list.min.js"></script>
 		<title>Guillaume's Dashboard</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 	</head>
@@ -43,7 +43,7 @@
 								<th>Test Coverage</th>
 							</thead>
 							<tbody>
-								<tr style="display: none;" id="template_row">
+								<tr style="display: none;" class="template">
 									<td class="distribution"><!-- Name of the distribution --></td>
 									<td class="version"><!-- Current version of the distribution --></td>
 									<td class="links">
