--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="/js/script.js"></script>
 		<script type="text/javascript" src="/js/cpan-distributions-list.min.js"></script>
+		<script>
+			$('#cpan_distributions').createDistributionsList(
+				{
+					pause_id: "AUBERTG",
+					github_id: "guillaumeaubert",
+				}
+			);
+		</script>
 		<title>Guillaume's Dashboard</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 	</head>
