Display the count of open issues on GitHub.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 								<th>Distribution</th>
 								<th>Current Version</th>
 								<th>Links</th>
+								<th>Open Issues</th>
 								<th>Build Status</th>
 								<th>Test Coverage</th>
 							</thead>
@@ -66,6 +67,7 @@
 										|
 										<span class="cpants"><!-- CPANTS link --></span>
 									</td>
+									<td class="github_open_issues"><!-- Count of issues and link to GitHub -->?</td>
 									<td class="travis_status_badge"><!-- Travis CI - badge to indicate build status --></td>
 									<td class="coveralls_badge"><!-- Coveralls.io - badge to indicate test coverage percentage --></td>
 								</tr>
