Added JQuery plugin info.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,54 @@
 								</tr>
 							</tbody>
 						</table>
+						
+						<h3>
+							<a name="JQuery Plugins" class="anchor" href="#jquery_plugins">
+								<span class="octicon octicon-link"></span>
+							</a>
+							JQuery Plugins
+						<h3>
+						
+						<table id="jquery_plugins">
+							<thead>
+								<th>Plugin</th>
+								<th>Current Version</th>
+								<th>Links</th>
+								<th>Open Issues</th>
+								<th>Build Status</th>
+								<th>Test Coverage</th>
+							</thead>
+							<tbody>
+								<tr>
+									<td class="distribution">CPAN Distributions List</td>
+									<td class="version">v0.2.0</td>
+									<td class="links">
+										<span class="github">
+											<a href="https://github.com/guillaumeaubert/jquery-cpan-distributions-list">GitHub</a>
+										</span>
+										|
+										<span class="jquery_plugins">
+											<a href="http://plugins.jquery.com/cpan-distributions-list/">JQuery Plugins</a>
+										</span>
+									</td>
+									<td class="github_open_issues">
+										<a href="https://github.com/guillaumeaubert/jquery-cpan-distributions-list/issues">
+											0
+										</a>
+									</td>
+									<td class="travis_status_badge">
+										<a href="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list">
+											<img src="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list.png?branch=master" />
+										</a>
+									</td>
+									<td class="coveralls_badge">
+										<a href='https://coveralls.io/r/guillaumeaubert/jquery-cpan-distributions-list?branch=master'>
+											<img src='https://coveralls.io/repos/guillaumeaubert/jquery-cpan-distributions-list/badge.png?branch=master' alt='Coverage Status' />
+										</a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
 					</article>
 				</div>
 			</div>
