Added coderwall badge.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 				<div id="main" role="main">
 					<div class="download-bar">
 						<div class="inner">
-							<a href="https://github.com/guillaumeaubert" class="code">View Guillaumeaubert.github.io on GitHub</a>
+							<a href="https://coderwall.com/guillaumeaubert">
+								<img alt="Endorse guillaumeaubert on Coderwall" src="https://api.coderwall.com/guillaumeaubert/endorsecount.png" />
+							</a>
 						</div>
 						<span class="blc"></span><span class="trc"></span>
 					</div>
