Added Ohloh badge.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 							<a href="https://coderwall.com/guillaumeaubert">
 								<img alt="Endorse guillaumeaubert on Coderwall" src="https://api.coderwall.com/guillaumeaubert/endorsecount.png" />
 							</a>
+							<a href='https://www.ohloh.net/accounts/30092?ref=Tiny' target='_blank'>
+								<img alt='Ohloh profile for Guillaume Aubert' border='0' height='15' src='https://www.ohloh.net/accounts/30092/widgets/account_tiny.gif' width='80' />
+							</a>
 						</div>
 						<span class="blc"></span><span class="trc"></span>
 					</div>
