Added LinkedIn badge.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 							<a href='https://www.ohloh.net/accounts/30092?ref=Tiny' target='_blank'>
 								<img alt='Ohloh profile for Guillaume Aubert' border='0' height='15' src='https://www.ohloh.net/accounts/30092/widgets/account_tiny.gif' width='80' />
 							</a>
+							<!-- http://www.linkedin.com/profile/profile-badges -->
+							<a href="http://www.linkedin.com/in/aubertguillaume">
+								<img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Guillaume Aubert's profile on LinkedIn">
+							</a>
 						</div>
 						<span class="blc"></span><span class="trc"></span>
 					</div>
