--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		
-		<link rel="stylesheet" href="/css/stylesheet.css?v=2013070901" media="screen"/>
+		<link rel="stylesheet" href="/css/stylesheet.css?v=2013071100" media="screen"/>
 		<link rel="stylesheet" href="/css/pygment_trac.css"/>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="/js/script.js"></script>
@@ -37,14 +37,14 @@
 					<div class="download-bar">
 						<div class="inner">
 							<a href="https://coderwall.com/guillaumeaubert">
-								<img alt="Endorse guillaumeaubert on Coderwall" src="https://api.coderwall.com/guillaumeaubert/endorsecount.png" />
+								<img alt="Endorse guillaumeaubert on Coderwall" src="https://api.coderwall.com/guillaumeaubert/endorsecount.png" width='110' height='20' />
 							</a>
-							<a href='https://www.ohloh.net/accounts/30092?ref=Tiny' target='_blank'>
+							<a href='https://www.ohloh.net/accounts/30092?ref=Tiny'>
 								<img alt='Ohloh profile for Guillaume Aubert' border='0' height='15' src='https://www.ohloh.net/accounts/30092/widgets/account_tiny.gif' width='80' />
 							</a>
 							<!-- http://www.linkedin.com/profile/profile-badges -->
 							<a href="http://www.linkedin.com/in/aubertguillaume">
-								<img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Guillaume Aubert's profile on LinkedIn">
+								<img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Guillaume Aubert's profile on LinkedIn" />
 							</a>
 						</div>
 						<span class="blc"></span><span class="trc"></span>
