--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 							<a href="http://www.linkedin.com/in/aubertguillaume">
 								<img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Guillaume Aubert's profile on LinkedIn" />
 							</a>
-							<a href="https://coderwall.com/guillaumeaubert">
+							<a href="https://coderwall.com/guillaumeaubert" style="margin-top: 3px">
 								<img alt="Endorse guillaumeaubert on Coderwall" src="https://api.coderwall.com/guillaumeaubert/endorsecount.png" width='110' height='20' />
 							</a>
-							<a href='https://www.ohloh.net/accounts/30092?ref=Tiny'>
+							<a href='https://www.ohloh.net/accounts/30092?ref=Tiny' style="margin-top: 4px;">
 								<img alt='Ohloh profile for Guillaume Aubert' border='0' height='15' src='https://www.ohloh.net/accounts/30092/widgets/account_tiny.gif' width='80' />
 							</a>
 						</div>
