Removed unnecessary attribute.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="inner">
 							<!-- http://www.linkedin.com/profile/profile-badges -->
 							<a href="http://www.linkedin.com/in/aubertguillaume">
-								<img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Guillaume Aubert's profile on LinkedIn" />
+								<img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" alt="View Guillaume Aubert's profile on LinkedIn" />
 							</a>
 							<a href="https://coderwall.com/guillaumeaubert" style="margin-top: 3px">
 								<img alt="Endorse guillaumeaubert on Coderwall" src="https://api.coderwall.com/guillaumeaubert/endorsecount.png" width='110' height='20' />
