Added title to the Flattr link.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<a href='https://www.ohloh.net/accounts/30092?ref=Tiny' style="margin-top: 4px;">
 								<img alt='Ohloh profile for Guillaume Aubert' border='0' height='15' src='https://www.ohloh.net/accounts/30092/widgets/account_tiny.gif' width='80' />
 							</a>
-							<script id='flattrbtn'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=guillaumeaubert&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('flattrbtn');</script>
+							<script id='flattrbtn'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=guillaumeaubert&button=compact&title=Guillaume's+Open+Source+Projects&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('flattrbtn');</script>
 						</div>
 						<span class="blc"></span><span class="trc"></span>
 					</div>
