--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					</div>
 					<article class="markdown-body">
 						<h3>
-							<a name="CPAN distributions" class="anchor" href="#cpan_distributions">
+							<a id="CPANDistributions" class="anchor" href="#CPANDistributions">
 								<span class="octicon octicon-link"></span>
 							</a>
 							CPAN Distributions
@@ -87,7 +87,7 @@
 						</table>
 						
 						<h3>
-							<a name="JQuery Plugins" class="anchor" href="#jquery_plugins">
+							<a id="JQueryPlugins" class="anchor" href="#JQueryPlugins">
 								<span class="octicon octicon-link"></span>
 							</a>
 							JQuery Plugins
