--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									</td>
 									<td class="travis_status_badge">
 										<a href="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list">
-											<img src="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list.png?branch=master" />
+											<img src="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list.png?branch=master" alt='Build Status' />
 										</a>
 									</td>
 									<td class="coveralls_badge">
@@ -140,7 +140,12 @@
 			</div>
 			<footer>
 				<div class="owner">
-					<p><a href="https://github.com/guillaumeaubert" class="avatar"><img src="https://secure.gravatar.com/avatar/3ec9018e8aff31524eac32f47003901f?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a>View <a href="https://github.com/guillaumeaubert">guillaumeaubert</a> on <a href="https://www.github.com">GitHub</a></p>
+					<p>
+						<a href="https://github.com/guillaumeaubert" class="avatar">
+							<img src="https://secure.gravatar.com/avatar/3ec9018e8aff31524eac32f47003901f?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48" alt="Guillaume Aubert" />
+						</a>
+						View <a href="https://github.com/guillaumeaubert">guillaumeaubert</a> on <a href="https://www.github.com">GitHub</a>
+					</p>
 				</div>
 				<div class="creds">
 					<small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
