Added white border around Ohloh logo.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<a href="https://coderwall.com/guillaumeaubert" style="margin-top: 3px">
 								<img alt="Endorse guillaumeaubert on Coderwall" src="https://api.coderwall.com/guillaumeaubert/endorsecount.png" width='110' height='20' />
 							</a>
-							<a href='https://www.ohloh.net/accounts/30092?ref=Tiny' style="margin-top: 4px;">
+							<a href='https://www.ohloh.net/accounts/30092?ref=Tiny' style="margin-top: 3px; border-width: 2px 3px 3px 3px; border-style: solid; border-color: white;">
 								<img alt='Ohloh profile for Guillaume Aubert' height='15' src='https://www.ohloh.net/accounts/30092/widgets/account_tiny.gif' width='80' />
 							</a>
 							<script id='flattrbtn'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=guillaumeaubert&button=compact&title=Guillaume\'s+Open+Source+Projects&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('flattrbtn');</script>
