--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
 					<div class="download-bar">
 						<div class="inner">
 							<ul>
-								<li>
+								<li id="badge_linkedin">
 									<!-- http://www.linkedin.com/profile/profile-badges -->
 									<a href="http://www.linkedin.com/in/aubertguillaume">
 										<img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" alt="View Guillaume Aubert's profile on LinkedIn" />
 									</a>
 								</li>
-								<li>
-									<a href="https://coderwall.com/guillaumeaubert" style="margin-top: 3px">
+								<li id="badge_coderwall">
+									<a href="https://coderwall.com/guillaumeaubert">
 										<img alt="Endorse guillaumeaubert on Coderwall" src="https://api.coderwall.com/guillaumeaubert/endorsecount.png" width='110' height='20' />
 									</a>
 								</li>
-								<li>
-									<a href='https://www.ohloh.net/accounts/30092?ref=Tiny' id="ohloh_link">
+								<li id="badge_ohloh">
+									<a href='https://www.ohloh.net/accounts/30092?ref=Tiny'>
 										<img alt='Ohloh profile for Guillaume Aubert' height='15' src='https://www.ohloh.net/accounts/30092/widgets/account_tiny.gif' width='80' />
 									</a>
 								</li>
-								<li>
+								<li id="badge_flattr">
 									<script id='flattrbtn'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=guillaumeaubert&button=compact&title=Guillaume\'s+Open+Source+Projects&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('flattrbtn');</script>
 								</li>
 							</ul>
