--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 								<li id="badge_flattr">
 									<script id='flattrbtn'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=guillaumeaubert&button=compact&title=Guillaume\'s+Open+Source+Projects&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('flattrbtn');</script>
 								</li>
+								<li id="badge_gittip">
+									<script data-gittip-username="guillaumeaubert" data-gittip-widget="button" src="//gttp.co/v1.js"></script>
+								</li>
 							</ul>
 						</div>
 						<span class="blc"></span><span class="trc"></span>
