--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				<div class="owner">
 					<p>
 						<a href="https://github.com/guillaumeaubert" class="avatar">
-							<img src="https://secure.gravatar.com/avatar/3ec9018e8aff31524eac32f47003901f?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48" alt="Guillaume Aubert" />
+							<img src="/images/avatar.jpg" width="48" height="48" alt="Guillaume Aubert" />
 						</a>
 						View <a href="https://github.com/guillaumeaubert">guillaumeaubert</a> on <a href="https://www.github.com">GitHub</a>
 					</p>
