Transition from Ohloh to OpenHub.

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 										<img alt="Endorse guillaumeaubert on Coderwall" src="https://api.coderwall.com/guillaumeaubert/endorsecount.png" width='110' height='20' />
 									</a>
 								</li>
-								<li id="badge_ohloh">
-									<a href='https://www.ohloh.net/accounts/30092?ref=Tiny'>
-										<img alt='Ohloh profile for Guillaume Aubert' height='15' src='https://www.ohloh.net/accounts/30092/widgets/account_tiny.gif' width='80' />
+								<li id="badge_openhub">
+									<a href='https://www.openhub.net/accounts/30092?ref=Tiny'>
+										<img alt='Open Hub profile for Guillaume Aubert' border='0' height='15' src='https://www.openhub.net/accounts/30092/widgets/account_tiny.gif' width='80' />
 									</a>
 								</li>
 							</ul>
