Remove domain name from links.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script type="text/javascript" src="http://guillaumeaubert.github.io//js/script.js"></script>
-		<script type="text/javascript" src="http://guillaumeaubert.github.io//js/cpan-distributions-list.min.js"></script>
+		<script type="text/javascript" src="/js/script.js"></script>
+		<script type="text/javascript" src="/js/cpan-distributions-list.min.js"></script>
 		<script>
 			$(document).ready(
 				function()
