--- a/index.html
+++ b/index.html
@@ -68,12 +68,10 @@
 					</thead>
 					<tbody>
 						<tr style="display: none;" class="template">
-							<td class="distribution"><!-- Name of the distribution --></td>
+							<td class="metacpan-distname"><!-- Link with the name of the distribution --></td>
 							<td class="version"><!-- Current version of the distribution --></td>
 							<td class="links">
 								<span class="github"><!-- GitHub link --></span>
-								|
-								<span class="metacpan"><!-- MetaCPAN link --></span>
 								|
 								<span class="cpants"><!-- CPANTS link --></span>
 							</td>
