Use SVG badges.

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 							</td>
 							<td class="travis_status_badge">
 								<a href="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list">
-									<img src="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list.png?branch=master" alt='Build Status' />
+									<img src="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list.svg?branch=master" alt='Build Status' />
 								</a>
 							</td>
 							<td class="coveralls_badge">
 								<a href='https://coveralls.io/r/guillaumeaubert/jquery-cpan-distributions-list?branch=master'>
-									<img src='https://coveralls.io/repos/guillaumeaubert/jquery-cpan-distributions-list/badge.png?branch=master' alt='Coverage Status' />
+									<img src='https://coveralls.io/repos/guillaumeaubert/jquery-cpan-distributions-list/badge.svg?branch=master' alt='Coverage Status' />
 								</a>
 							</td>
 						</tr>
