Add CPAN Tester information.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 							<th class="distribution">Distribution</th>
 							<th class="version">Version</th>
 							<th class="links">Links</th>
+							<th class="cpan-testers">CPAN Testers</th>
 							<th class="github_open_issues">Issues</th>
 							<th class="travis_status_badge">Status</th>
 							<th class="coveralls_badge">Tests</th>
@@ -74,6 +75,13 @@
 								<span class="github"><!-- GitHub link --></span>
 								|
 								<span class="cpants"><!-- CPANTS link --></span>
+							</td>
+							<td class="cpan-testers">
+								<span class="cpan-testers-pass"><!-- CPAN Testers: passed tests --></span>
+								/
+								<span class="cpan-testers-fail"><!-- CPAN Testers: failed tests --></span>
+								/
+								<span class="cpan-testers-na"><!-- CPAN Testers: N/A tests --></span>
 							</td>
 							<td class="github_open_issues"><!-- Count of issues and link to GitHub -->?</td>
 							<td class="travis_status_badge"><!-- Travis CI - badge to indicate build status --></td>
