Load JS at the bottom of the page.

--- a/index.html
+++ b/index.html
@@ -3,35 +3,6 @@
 	<head>
 		<meta charset='utf-8' />
 		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
-
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script type="text/javascript" src="/js/cpan-distributions-list.min.js"></script>
-		<script>
-			$(document).ready(
-				function()
-				{
-					$('#cpan_distributions').createDistributionsList(
-						{
-							pause_id: "AUBERTG",
-							github_id: "guillaumeaubert",
-						}
-					);
-				}
-			);
-		</script>
-
-		<script type="text/javascript">
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-2001838-13']);
-			_gaq.push(['_trackPageview']);
-
-			(function() {
-				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
-		</script>
-
 		<meta name="description" content="A dashboard for Guillaume Aubert's open source projects" />
 		<link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 		<title>A dashboard for Guillaume Aubert's open source projects</title>
@@ -159,5 +130,35 @@
 				</ul>
 			</footer>
 		</div>
+
+		<!-- Load JS files -->
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="/js/cpan-distributions-list.min.js"></script>
+		<script>
+			$(document).ready(
+				function()
+				{
+					$('#cpan_distributions').createDistributionsList(
+						{
+							pause_id: "AUBERTG",
+							github_id: "guillaumeaubert",
+						}
+					);
+				}
+			);
+		</script>
+
+		<!-- Google Analytics -->
+		<script type="text/javascript">
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-2001838-13']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		</script>
 	</body>
 </html>
