Add Ansible plugins section.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,47 @@
 						</tr>
 					</tbody>
 				</table>
+
+				<h3>
+					<a id="AnsiblePlugins" class="anchor" href="#AnsiblePlugins"></a>
+					Ansible Plugins
+				</h3>
+
+				<table id="ansible_plugins">
+					<thead>
+						<tr>
+							<th class="distribution">Plugin</th>
+							<th class="version">Version</th>
+							<th class="links">Links</th>
+							<th class="github_open_issues">Issues</th>
+							<th class="travis_status_badge">Status</th>
+							<th class="coveralls_badge">Tests</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="distribution">Ansible Symlink Plugin</td>
+							<td class="version">-</td>
+							<td class="links">
+								<span class="github">
+									<a href="https://github.com/guillaumeaubert/ansible-symlink-plugin">GitHub</a>
+								</span>
+							</td>
+							<td class="github_open_issues">
+								<a href="https://github.com/guillaumeaubert/ansible-symlink-plugin/issues">
+									-
+								</a>
+							</td>
+							<td class="travis_status_badge">
+								<a href="https://travis-ci.org/guillaumeaubert/ansible-symlink-plugin">
+									<img src="https://travis-ci.org/guillaumeaubert/ansible-symlink-plugin.svg?branch=master" alt='Build Status' />
+								</a>
+							</td>
+							<td class="coveralls_badge">-</td>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</section>
 		</div>
 
