Replace with a link to view issues.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							</td>
 							<td class="github_open_issues">
 								<a href="https://github.com/guillaumeaubert/jquery-cpan-distributions-list/issues">
-									0
+									View
 								</a>
 							</td>
 							<td class="travis_status_badge">
@@ -132,7 +132,7 @@
 							</td>
 							<td class="github_open_issues">
 								<a href="https://github.com/guillaumeaubert/ansible-symlink-plugin/issues">
-									-
+									View
 								</a>
 							</td>
 							<td class="travis_status_badge">
