--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<section id="main_content" class="inner">
 				<h3>
 					<a id="CPANDistributions" class="anchor" href="#CPANDistributions"></a>
-					CPAN Distributions
+					CPAN Distributions <span class="count"></span>
 				</h3>
 				<table id="cpan_distributions">
 					<thead>
@@ -63,7 +63,7 @@
 
 				<h3>
 					<a id="JQueryPlugins" class="anchor" href="#JQueryPlugins"></a>
-					JQuery Plugins
+					JQuery Plugins <span class="count">(1)</span>
 				</h3>
 
 				<table id="jquery_plugins">
@@ -107,7 +107,7 @@
 
 				<h3>
 					<a id="AnsiblePlugins" class="anchor" href="#AnsiblePlugins"></a>
-					Ansible Plugins
+					Ansible Plugins <span class="count">(1)</span>
 				</h3>
 
 				<table id="ansible_plugins">
