Display the number of CPAN distributions.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<section id="main_content" class="inner">
 				<h3>
 					<a id="CPANDistributions" class="anchor" href="#CPANDistributions"></a>
-					CPAN Distributions <span class="count"></span>
+					CPAN Distributions <span class="count">(<span class="cpan_distributions_count">?</span>)</span>
 				</h3>
 				<table id="cpan_distributions">
 					<thead>
