Switch LinkedIn badge to https.

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 			<footer class="inner">
 				<ul>
 					<li id="badge_linkedin">
-						<!-- http://www.linkedin.com/profile/profile-badges -->
-						<a href="http://www.linkedin.com/in/aubertguillaume">
-							<img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" alt="View Guillaume Aubert's profile on LinkedIn" />
+						<!-- https://www.linkedin.com/profile/profile-badges -->
+						<a href="https://www.linkedin.com/in/aubertguillaume">
+							<img src="https://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" alt="View Guillaume Aubert's profile on LinkedIn" />
 						</a>
 					</li>
 					<li id="badge_openhub">
