Hide tooltips on the chart.
The X scale is too crowded to make it display nicely.

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
 							{
 								pointHitDetectionRadius: 2,
 								datasetStroke: false,
+								showTooltips: false,
 								scaleOverride: true,
 								scaleSteps: 5,
 								scaleStepWidth: 50,
