Add total number of commits.

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
 								scaleStartValue: 0
 							}
 						);
+						$('#commits_total').html( '(' + commits_total + ')' );
 				}
 			);
 		</script>
